# CS-Outerview

./: README.md
Linux/CPU/: 1.CPU中断.md
Linux/CRP/BRRIP/: 1.缓存地址解析.md
Linux/FS/: mv与动态库.md
Linux/IPC/: 1.mmap通知机制.md  2.高效及优化.md  3.信号量底层实现.md
Linux/Memory/: 1.top中内存的三个值.md  2.分配连续物理内存.md
Linux/Thread/: 1.fork与vfork.md
cpp/GCC/: 1.-D参数.md  2.-I与-L参数.md
cpp/GDB/: 1.多线程调试.md
cpp/语法/: Q134.判断两个时间是否是同一周.md  Q135.虚表中的地址是绝对地址吗.md
中间件/RPC/: 2.为什么选取protobuf.md  rpc原理.md
中间件/Redis/: Q18.内存淘汰策略.md  Q19.过期键删除策略.md
分布式/CAP/: 1.CAP理论.md
分布式/分布式ID/: 1.雪花算法.md  2.雪花算法问题及解决方案.md  3.UUID.md  4.UUIDv7.md
手撕代码/: 1.出栈顺序.md  2.实现memmove.md  3.ipv4转uint64.md  4.16位数字模拟30万人抽1万人.md
数据库/LevelDB/: 1.写数据过程.md
数据库/MySQL/: 1.ACID保证.md
智力题/: 1.54张扑克牌抽到同花顺的概率.md
计算机基础/哈希/: 1.哈希冲突解决内存不足.md
计算机基础/无锁队列/: 1.mpmc实现.md
计算机基础/缓存淘汰/2Q/: 1.算法.md  2.应用.md
计算机基础/缓存淘汰/LFU/: 1.问题.md  2.应用.md
计算机基础/缓存淘汰/LRU/: 1.问题.md  2.应用.md
计算机基础/缓存淘汰/MGLRU/: 1.算法.md  2.数据结构.md  3.哈希冲突.md  4.Aging.md
计算机网络/HTTP/: 1.GET方法可以携带body吗.md  2.HTTP1.1和2.md  3.JWT的Token.md  4.http3.0.md  5.TLS.md  6.请求头.md
计算机网络/Ping/: 1.ping.md  2.tcping.md
计算机网络/TCP/: 1.断开连接等待2MSL.md  2.MSL取值.md
计算机网络/拥塞控制/BBR/: BBR.md  RTT测量.md
计算机网络/拥塞控制/BIC/: bic.md
计算机网络/拥塞控制/COPA/: copa.md  排队延迟.md
计算机网络/拥塞控制/CUBIC/: cubic.md
计算机网络/拥塞控制/DCTCP/: dctcp.md  ecn.md  路由器ecn.md
计算机网络/拥塞控制/RENO/: reno.md  缺陷及改进.md
计算机网络/拥塞控制/VEGAS/: vegas.md
设计题/: 10.1000w标题判断存在.md  11.只写一次排序电话号码.md  12.通过VPN输入url到展示页面.md  13.扫描二维码.md  7.抢红包.md  8.CS架构丢包重传.md  9.寻找两个大文件中共有且出现频率最高的内容.md
面经真题/吉比特/: 吉比特C++春招一二面20250905.md  吉比特C++服务端开发一二面20250904.md
面经真题/小米/: 小米C++嵌入式一面20250922.md
面经真题/小红书/: 小红书存储一面202550908.md
面经真题/米哈游/: 米哈游C++实习一面20250903.md
面经真题/网易/: 网易雷火C++一面20250908.md
面经真题/腾讯/: 腾讯PCGTRPC一面20251013.md  腾讯WXG一面20250906.md  腾讯WXG一面20251028.md  腾讯WXG一面20251031.md  腾讯后端开发一面20251029.md
项目/minio-app/: CMakeLists.txt  README.md  compile_stream.sh  minio_basic.cpp  minio_stream.cpp  test-file.txt
